--- a/public/layout/backend/css/style.css
+++ b/public/layout/backend/css/style.css
@@ -6,6 +6,14 @@
  *   version 2.9.2
  *
 */
+
+/** your css */
+.color-red{
+    color: red;
+}
+
+/** endl */
+
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('../fonts/glyphicons-halflings-regular.eot');
